Bug 116929 - FILEOPEN: Transparent mask imported incorrectly
Summary: FILEOPEN: Transparent mask imported incorrectly
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
6.1.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.1.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2018-04-10 19:07 UTC by Xisco Faulí
Modified: 2018-04-12 08:35 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
sample file (288.00 KB, application/vnd.ms-powerpoint)
2018-04-10 19:07 UTC, Xisco Faulí
Details
comparison LibreOffice 6.1 and MSO 2010 (138.24 KB, image/png)
2018-04-10 19:08 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2018-04-10 19:07:30 UTC
Created attachment 141268 [details]
sample file

Steps to reproduce:
1. Open attached document.

Observed behaviour: IBM is completely white and the orange image has 3 white squares.

Reproduced 

Version: 6.1.0.0.alpha0+
Build ID: 0a4c1fb68c3619e61099a7c548f550b0d3fd7a53
CPU threads: 4; OS: Linux 4.13; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group

[Bug found by office-interoperability-tools]
Comment 1 Xisco Faulí 2018-04-10 19:08:31 UTC
Created attachment 141269 [details]
comparison LibreOffice 6.1 and MSO 2010
Comment 2 Xisco Faulí 2018-04-10 19:09:38 UTC
Regression introduced by:

author	Noel Grandin <noel.grandin@collabora.co.uk>	2018-03-16 13:43:08 +0200
committer	Noel Grandin <noel.grandin@collabora.co.uk>	2018-03-16 19:24:10 +0100
commit 8015e0a15d1b8c454c26c645c7e8ebee9c4e1ee1 (patch)
tree 00f59c45f1efb3cbd928bfe8f374ee42ad9a19db
parent b0967c69d3e08efbc8e3dec807601ac52870792a (diff)
move some mask code from SvxMSDffManager::ImportGraphic inside BitmapEx
part of moving GetMask/GetAlpha touching code inside vcl

Bisected with: bibisect-linux64-6.1

Adding Cc: to Noel Grandin
Comment 3 Commit Notification 2018-04-11 13:54:30 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e65918b837b6c84604413d0de3cfaedaf8a53913

tdf#116929 Transparent mask imported incorrectly

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Xisco Faulí 2018-04-12 08:35:57 UTC
Verfied in

Version: 6.1.0.0.alpha0+
Build ID: 24a57e2b854a1b8b3b8533ac72a6614ee29e374a
CPU threads: 4; OS: Linux 4.13; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group

Noel, Thanks for the quick fix!!