tdf#116929 Transparent mask imported incorrectly

regression from
    commit 8015e0a15d1b8c454c26c645c7e8ebee9c4e1ee1
    Date:   Fri Mar 16 13:43:08 2018 +0200
    move some mask code from SvxMSDffManager::ImportGraphic inside
BitmapEx

Change-Id: Idee9728f1274f487f5c085f1756ccb5cf28430ec
Reviewed-on: https://gerrit.libreoffice.org/52716
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>